# expander-proto

./: CMakeLists.txt  README.md  generate_all.cmd  generate_nanopb.cmd  generate_output.cmd  generate_protoc.cmd
proto/: ctrl.options  ctrl.proto  dac.options  dac.proto  gpio.proto  i2c.options  i2c.proto  uart.options  uart.proto
proto_c/: ctrl.pb.c  ctrl.pb.h  dac.pb.c  dac.pb.h  gpio.pb.c  gpio.pb.h  i2c.pb.c  i2c.pb.h  uart.pb.c  uart.pb.h
proto_cpp/: uart.pb.cc  uart.pb.h
proto_py/: ctrl_pb2.py  ctrl_pb2.pyi  dac_pb2.py  dac_pb2.pyi  gpio_pb2.py  gpio_pb2.pyi  i2c_pb2.py  i2c_pb2.pyi  uart_pb2.py  uart_pb2.pyi
